I forgot to install Lime bruh

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Install Haxe dependencies
         run: |
+          haxelib install lime --quiet
           curl --output ../hxcpp-4.3.45.zip --location https://github.com/HaxeFoundation/hxcpp/releases/download/v4.3.45/hxcpp-4.3.45.zip
           haxelib install ../hxcpp-4.3.45.zip --quiet
           haxelib dev extension-webm $GITHUB_WORKSPACE
